## Process this file with automake --
include $(top_srcdir)/src/kernel.mk

AM_LDFLAGS += -no-undefined

noinst_LTLIBRARIES = libobject.la

libobject_la_SOURCES =				\
atom.hh						\
atom.hxx					\
object.hh					\
object.hxx					\
object.cc					\
primitives.hh					\
primitives.cc					\
code-class.hh					\
code-class.cc					\
context-class.hh				\
context-class.cc				\
float-class.hh					\
float-class.cc					\
integer-class.hh				\
integer-class.cc				\
list-class.hh					\
list-class.cc					\
object-class.hh					\
object-class.cc					\
primitive-class.hh				\
primitive-class.cc				\
state.hh					\
state.cc					\
string-class.hh					\
string-class.cc					\
urbi-exception.hh				\
urbi-exception.hxx				\
urbi-exception.cc
