## Process this file with automake --
include $(top_srcdir)/src/kernel.mk

AM_LDFLAGS += -no-undefined

noinst_LTLIBRARIES = libobject.la

libobject_la_SOURCES =				\
atom.hh						\
atom.hxx					\
code-class.cc					\
code-class.hh					\
context-class.cc				\
context-class.hh				\
float-class.cc					\
float-class.hh					\
fwd.hh						\
integer-class.cc				\
integer-class.hh				\
list-class.cc					\
list-class.hh					\
object-class.cc					\
object-class.hh					\
object.cc					\
object.hh					\
object.hxx					\
primitive-class.cc				\
primitive-class.hh				\
primitives.cc					\
primitives.hh					\
state.cc					\
state.hh					\
string-class.cc					\
string-class.hh					\
urbi-exception.cc				\
urbi-exception.hh				\
urbi-exception.hxx
