## Process this file with automake --
include $(top_srcdir)/src/kernel.mk

noinst_LTLIBRARIES = librunner.la

librunner_la_SOURCES =				\
coroutine.hh					\
coroutine.hxx					\
job.hh						\
job.hxx						\
fwd.hh						\
runner.hh					\
runner.hxx					\
runner.cc					\
scheduler.hh					\
scheduler.hxx					\
scheduler.cc
